# Mnemo

./: .gitignore  README.md  benchmark.py  dev.bat  dev.ps1  dev_watch.py  pyproject.toml  run.py  start_mnemo.bat
benchmarks/: 2026-06-25.md  2026-06-25_v2.md  CACHE.md  queries_v1.json  queries_v2.json  queries_v3.json
benchmarks/results/: 2026-06-25_v3.json
docs/: 00_product_thesis.md  01_discussion_context.md  02_product_spec.md  03_product_prd.md  04_product_evolution.md
docs/development/: decisions.md  search_failures.md  state_v1.md  ux_audit.md
docs/new/: 00_product_thesis.md  01_discussion_context.md  02_product_spec.md  03_product_prd.md  04_roadmap.md
src/mnemo/: api.py  chunker.py  cleaning.py  config.py  daemon.py  db.py  debug.py  embedder.py  enrich.py  icons.py  indexer.py  parser.py  search.py  ui.py  watcher.py
stitch_mnemo_memory_launcher/: mnemo_project_brief.md
stitch_mnemo_memory_launcher/mnemo_design_system/: DESIGN.md
stitch_mnemo_memory_launcher/mnemo_desktop_launcher/: code.html
stitch_mnemo_memory_launcher/mnemo_launcher_expanded_context/: code.html
